--- a/.env.local
+++ b/.env.local
@@ -7,4 +7,4 @@ VITE_APPWRITE_API_KEY=standard_84da85ba34108db9add786a0930252bbcfa9f336ea0fef2a4
 VITE_APPWRITE_DATABASE_ID=683d95c70014e8004a23
 VITE_APPWRITE_USERS_COLLECTION_ID=683d9c3600216d904445
 VITE_APPWRITE_TRIPS_COLLECTION_ID=683eb0c5003dc54ea9a3
-VITE_APPWRITE_API_ENDPOINT=https://cloud.appwrite.io/v1
+VITE_APPWRITE_API_ENDPOINT=https://fra.cloud.appwrite.io/v1
